# cosmic-ext-applet-external-monitor-brightness

./: .gitignore  99-apple-studio-display.rules  Cargo.toml  README.md  cargo-sources.json  flatpak_schema.json  io.github.cosmic_utils.cosmic-ext-applet-external-monitor-brightness.json  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
i18n/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/bg/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/cs/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/de/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/en/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/fr/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/hu/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/it/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/ja/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/nl/: cosmic_ext_applet_external_monitor_brightness.ftl
i18n/sv/: cosmic_ext_applet_external_monitor_brightness.ftl
res/: desktop_entry.desktop  metainfo.xml
src/: app.rs  brightness_sync_daemon.rs  config.rs  daemon.rs  icon.rs  localize.rs  main.rs  monitor.rs  ui_sync.rs  view.rs  window.rs
src/devices/: mod.rs
src/devices/apple/: pro_display_xdr.rs  studio_display.rs
src/devices/lg/: ultrafine_4k.rs  ultrafine_5k.rs
src/protocols/: apple_hid.rs  mod.rs
src/protocols/apple_hid/: device.rs
