[package]
name = "cosmic-ext-applet-external-monitor-brightness"
version = "0.1.0"
edition = "2021"

[dependencies]
ddc-hi = "0.4.1"
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "libcosmic",
    "once_cell",
] }
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9"
rust-embed = "8"
once_cell = "1.19.0"
log = "0.4.22"
env_logger = "0.11.5"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland"]
