[package]
name = "cosmic-ext-applet-external-monitor-brightness"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/cosmic-utils/cosmic-ext-applet-external-monitor-brightness"

[dependencies]
ddc-hi = "0.4"
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9"
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-journald = "0.3"
tokio = { version = "1", features = ["full"] }
serde = "1.0.219"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["applet", "tokio", "wayland", "dbus-config"]

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }
